kubernetes/apps/media/qbittorrent/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
  labels:
    ipallowlist: "true"
    auth: "required"
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://qbittorrent.media.svc.cluster.local:80
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - qbt.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 80
